# gera_config

./: NetboxTenant.db  README.md  app.py  bgp_config.py  consulta_snmp.py  devices.db  pyproject.toml  requirements.txt  script.py  tenant_groups.db  tenants.db  testes.ipynb  tools.py
api/routes/: netbox_routes.py
api/services/: bgp_service.py  netbox_service.py
core/models/: device.py
gera_config/: gera_comandos.py
local_templates/: comandos.py  hw_bgp_ups.txt  hw_bgp_ups_comm.txt  l2vpn_manager.py  l2vpn_ptp.j2
templates/: comandos.py  hw_bgp_cli.txt  templates.txt
utils/: rp_name.py
